--- a/lang-portal/backend-flask/.gitignore
+++ b/lang-portal/backend-flask/.gitignore
@@ -6,6 +6,22 @@ __pycache__/
 .Python
 venv/
 ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Flask
 instance/
